# new_project

./: CMakeLists.txt  file_list_gen.cmake  new_projec.c  new_projec.h  new_projec_gen.c  new_projec_gen.h
screens/: new_projec.xml  new_projec_gen.c  new_projec_gen.h
